href for a tags

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <img class="icon" src="https://cdn.activetheory.net/assets/images/ui/fb.png">
             </div>
             <div class="contact-desc">
-                <span>+353 89 471 4339</span><br>
-                <span>HELLO@WALKCAT.NET</span><br>
+                <a href="tel:+353894714339"><span>+353 89 471 4339</span></a><br>
+                <a href="mailto:vladislav@walkcat.net"><span>VLADISLAV@WALKCAT.NET</span></a><br>
                 <span>SANDYFORD, DUBLIN, REPUBLIC OF IRELAND</span>
             </div>
             <div class="contact-email">
